# humongous-rs

./: Cargo.toml  README.md
humongous-bin/: Cargo.toml
humongous-bin/src/: main.rs
humongous-lib/: Cargo.toml
humongous-lib/src/: conversions.rs  fs.rs  http.rs  lib.rs
src/: main.rs
