[package]
name = "humongous_ox"
version = "0.1.0"
authors = ["Charles Foster <cfoster0@ccrma.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.3.5", features = ["stream", "gzip"] }
async-std = "1.6.5"
bytes = "0.5"
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.11"
nom = "5.1.2"
pin-project = "0.4"
reqwest = { version = "0.10.8", features = ["stream"] }
tokio = { version = "0.2", features = ["full"] }
warc_parser = "2.0.0"