[package]
name = "humongous_ox"
version = "0.1.0"
authors = ["Charles Foster <cfoster0@ccrma.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.1.0"
async-channel = "1.4.2"
async-compression = { version = "0.3.5", features = ["stream", "gzip"] }
async-std = "1.6.5"
bumpalo = { version = "3.4.0", features = ["collections"] }
bytes = "0.5"
chardetng = "0.1.9"
encoding = "0.2.33"
env_logger = "0.7.1"
futures = "0.3.5"
httparse = "1.3.4"
log = "0.4.11"
lol_html = "0.2.0"
maplit = "1.0.2"
nom = "5.1.2"
pin-project = "0.4"
reqwest = { version = "0.10.8", features = ["stream"] }
tokio = { version = "0.2", features = ["full"] }
warc_parser = "2.0.0"
whatlang = "0.10.0"