[package]
name = "humongous"
version = "0.1.0"
authors = ["Charles Foster <cfoster0@ccrma.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.4.2"
env_logger = "0.7.1"
futures = "0.3.5"
humongous-lib = { path = "./../humongous-lib", features = ["stream"] }
log = "0.4.11"
tokio = { version = "0.2", features = ["full"] }