[package]
name = "humongous-lib"
version = "0.1.0"
authors = ["Charles Foster <cfoster0@ccrma.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["http"]
http = ["reqwest", "async-compression/stream"]
fs-async-std = ["fs", "async-compression/futures-io", "async-std"]
fs-tokio = ["fs", "async-compression/tokio-02", "tokio"]
fs = []

[dependencies]
ammonia = "3.1.0"
bytes = "0.5"
chardetng = "0.1.9"
encoding = "0.2.33"
env_logger = "0.7.1"
futures = "0.3.5"
futures-io = "0.3.6"
httparse = "1.3.4"
log = "0.4.11"
lol_html = "0.2.0"
maplit = "1.0.2"
nom = "5.1.2"
pin-project = "0.4"
regex = "1.3.9"
warc_parser = "2.0.0"
whatlang = "0.10.0"

async-compression = { version = "0.3.5", features = ["gzip"], optional = true }
async-std = { version = "1.6.5", optional = true }
reqwest = { version = "0.10.8", features = ["stream"], optional = true }
tokio = { version = "0.2.22", optional = true }